--- a/TODO.txt
+++ b/TODO.txt
@@ -28,9 +28,6 @@
 	-	Dict
 	-	Tupple
 
-
-# ----------------------------------- NEXT  -----------------------------------
-
 • Files:
 	-   Read
 	-   Write
@@ -38,23 +35,23 @@
 
 • JSON
 
-# -----------------------------------------------------------------------------
 
-• Параметры из командной строки
-
-
-
+# ----------------------------------- NEXT  -----------------------------------
 
 • Collections 2
 	-	List: subliststs
 	-	Dict: ???
     -   Set
 
-
 • Functions
 	-	Task: написать функцию принимающую на вход LIST
 	-	Task: написать функцию возвращающую LIST
 
+# -----------------------------------------------------------------------------
+
+• Параметры из командной строки
+
+• Генераторы
 
 • Classes
 
