--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,31 @@
+# ==========================================================================================================
+					Data Scientist | Requirements
+# ==========================================================================================================
+
+• знать Python
+• создавать SQL-запросы
+• работать с метриками и дашбордами
+• ориентироваться в бизнес-процессах
+
+
+• Pandas
+• Using Databases with Python: MySQl, SQLite
+• Using Python to Access Web Data : Requests, Networkx
+• Visualization: Matplotlib, Seaborn, Bokeh
+• Jupiter Notebook, Tableau.
+
+
+• Steps:
+	1. Ask or Specify Data Requirements
+	2. Prepare or Collect Data
+	3. Clean and Process
+	4. Analyze
+	5. Share
+	6. Act or Report
+
+# ==========================================================================================================
+					Blocks
+# ==========================================================================================================
 
 • Varibales
 • Print
@@ -38,16 +66,17 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
-• Collections 2
-	-	List: subliststs
-	-	Dict: ???
-    -   Set
-
-• Functions
-	-	Task: написать функцию принимающую на вход LIST
-	-	Task: написать функцию возвращающую LIST
+Classes
+	наследование
+	вызов методов базового класса
+	вызов конструктора базового класса
+	переопределение метода
 
 # -----------------------------------------------------------------------------
+
+
+• imports
+
 
 • Параметры из командной строки
 
@@ -63,7 +92,6 @@
 
 • ContextManagers
 
-• Random
 
 # -----------------------------------
 
