--- a/TODO.txt
+++ b/TODO.txt
@@ -68,6 +68,7 @@
 
 Classes
 	наследование
+	Multiple_Inheritance.py
 	вызов методов базового класса
 	вызов конструктора базового класса
 	переопределение метода
