--- a/TODO.txt
+++ b/TODO.txt
@@ -66,18 +66,10 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
-Classes
-	наследование
-	Multiple_Inheritance.py
-	вызов методов базового класса
-	вызов конструктора базового класса
-	переопределение метода
 
 # -----------------------------------------------------------------------------
 
-
-• imports
-
+• exceptions
 
 • Параметры из командной строки
 
