--- a/TODO.txt
+++ b/TODO.txt
@@ -66,14 +66,22 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
+• Classes
+	- создать несколько объектов - они разные
+	- поместить в ЛИСТ
+	- статические методы и переменные
+
+
+• Генераторы
+
+• List
+
 
 # -----------------------------------------------------------------------------
 
 • exceptions
 
 • Параметры из командной строки
-
-• Генераторы
 
 • Classes
 
