--- a/TODO.txt
+++ b/TODO.txt
@@ -66,14 +66,22 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
-• Генераторы
 
-• List
+• exceptions
+	- база
+	- raise
+	- finaly
+
+
+• генараторы
+	- разница со списками
+	- yeild - как создать генератор
+
+
+• Data Time
 
 
 # -----------------------------------------------------------------------------
-
-• exceptions
 
 • Параметры из командной строки
 
@@ -81,12 +89,9 @@
 
 • Lambdas
 
-• Data Time
-
-• Decorators
-
 • ContextManagers
 
+• Iterators
 
 # -----------------------------------
 
