--- a/TODO.txt
+++ b/TODO.txt
@@ -66,20 +66,14 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
-
 • exceptions
-	- база
 	- raise
-	- finaly
-
 
 • генараторы
-	- разница со списками
 	- yeild - как создать генератор
 
-
-• Data Time
-
+• Декораторы:
+	- Examples
 
 # -----------------------------------------------------------------------------
 
