--- a/TODO.txt
+++ b/TODO.txt
@@ -66,26 +66,23 @@
 
 # ----------------------------------- NEXT  -----------------------------------
 
-• exceptions
-	- raise
+• Iterators
 
-• генараторы
-	- yeild - как создать генератор
+• Classes
+	- статические методы
+	- свойства
 
-• Декораторы:
-	- Examples
-
-# -----------------------------------------------------------------------------
 
 • Параметры из командной строки
+
+
+# -----------------------------------------------------------------------------
 
 • Classes
 
 • Lambdas
 
 • ContextManagers
-
-• Iterators
 
 # -----------------------------------
 
